--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			<main>
 				<h1>Bonjour</h1>
 				<p> cinquieme page html :) </p>
+				<video controls>
+					<source src="video/Rickroll.mp4">
+				</video>
 				<div>
 					<figure>
 						<img src="img/rickroll-roll.gif" alt="Rick_Roll_meme">
@@ -18,12 +21,15 @@
 					<audio controls>
 						<source src="audio/Rickroll.mp3" type="audio/mpeg">
 					</audio>
-				
+					<p>Press <kbd>Ctrl</kbd> + <kbd>C</kbd> to copy text (Windows).</p>
 					<figure>
 						<img src="img/kick-tyre.gif" alt="verstapen_hit_tyre">
 						<figcaption>Max Verstapen qui frappe ses pneus.</figcaption>	
 					</figure>
 				</div>
+				<p>The HTML <code>button</code> tag defines a clickable button.</p>
+
+				<p>The CSS <code>background-color</code> property defines the background color of an element.</p>
 				<div>
 					<form>
 						<label for="fname" name="Prénom">Prénom:</label>
